# inverted_double_pendulum_on_cart

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
configs/: default.yaml  hybrid_10of10.yaml  hybrid_reliable.yaml  stabilizer.yaml  stabilizer_handoff.yaml  stabilizer_lqr.yaml  swingup.yaml  swingup_capture.yaml  swingup_curriculum.yaml  swingup_fixed_seed_finetune.yaml  swingup_reliability.yaml  swingup_slow_handoff.yaml
src/idp_rl/: __init__.py  agent.py  collect_handoff_states.py  config.py  controllers.py  dynamics.py  env.py  evaluate.py  hybrid_agent.py  hybrid_config.py  lqr.py  ppo.py  pretrain_stabilizer.py  rollout.py  runtime.py  train.py  tune_hybrid.py
tests/: test_agent.py  test_dynamics.py  test_env.py  test_hybrid.py  test_lqr.py  test_training_smoke.py
